crates/aura-terminal/tests/ui/send_owned_without_owner.stderr
error[E0593]: closure is expected to take 3 arguments, but it takes 2 arguments
 --> tests/ui/send_owned_without_owner.rs:6:41
  |
6 |     let _: SendOwnedCallback = Arc::new(|_channel_id: String, _content: String| {});
  |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                                         |
  |                                         expected closure that takes 3 arguments
  |                                         takes 2 arguments
